# Paper-Verify

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/paperverify/: __init__.py  cli.py  exceptions.py  matcher.py  parser.py  reporter.py  validator.py
tests/: test_core.py
