[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-verify"
version = "0.1.0"
description = "Validate academic paper claims against experiment results"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rakesh Arasada", email = "rakaarao17@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
keywords = ["latex", "paper", "verification", "research", "reproducibility"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    # Excel support
    "openpyxl>=3.1.0",
    # Word support
    "python-docx>=1.0.0",
    # YAML support
    "pyyaml>=6.0.0",
    # PDF support (requires Java runtime)
    "tabula-py>=2.7.0",
    "jpype1>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
paperverify = "paperverify.cli:app"

[project.urls]
Homepage = "https://github.com/rakaarao17/paper-verify-release"
Repository = "https://github.com/rakaarao17/paper-verify-release"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
